--- a/src/client/Client/Pages/Locks/AssetsLocksPage.razor
+++ b/src/client/Client/Pages/Locks/AssetsLocksPage.razor
@@ -6,24 +6,28 @@
     <div class="d-flex">
         <MudHidden Breakpoint="Breakpoint.SmAndUp">
             <MudText Class="mr-2 align-self-center" Typo="Typo.h5" GutterBottom="false">Locked Assets</MudText>
-            <MudIconButton Class="align-self-center" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
         <MudHidden Breakpoint="Breakpoint.Xs">
             <MudText Class="mr-4 align-self-center" Typo="Typo.h4" GutterBottom="false">Locked Assets</MudText>
-            <MudIconButton Class="align-self-center" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
+        @if (IsCompletelyLoaded)
+        {
+            <MudIconButton Class="align-self-center" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" OnClick="FetchDataAsync" />
+        }
+
     </div>
 </MudContainer>
 
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
     @if (!IsLoaded)
     {
-        //skeleton
+        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="56px" Width="100%" />
+        <MudSkeleton Class="mt-2" SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="280px" Width="100%" />
     }
     else
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
-            <MudTable Items="@AssetCounters" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.None">
+            <MudTable Items="@AssetCounters" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.Sm">
                 <HeaderContent>
                     <MudTh>Asset</MudTh>
                     <MudTh>Locked Amount</MudTh>
@@ -32,26 +36,42 @@
                 <RowTemplate>
                     @if (@context.AssetToken == null)
                     {
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
                     }
                     else
                     {
-                        <MudTd>
+                        <MudTd DataLabel="Asset">
                             <div>
-                                <MudText Color="Color.Primary" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
-                                    <b>
-                                    @context.AssetToken.Name (@context.AssetToken.Symbol)
-                                    </b>
-                                 </MudText>
-                                <MudText Typo="Typo.caption">@context.AssetToken.AssetScriptHash.ToString()</MudText>
+                                @if (AppBreakpointService.CurrentBreakpoint == Breakpoint.Xs || AppBreakpointService.CurrentBreakpoint == Breakpoint.Sm)
+                                {
+                                    <MudText Color="Color.Primary" Align="Align.Right" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
+                                        <b>
+                                            <span>@context.AssetToken.Symbol</span>
+                                        </b>
+                                    </MudText>
+                                    <MudText Typo="Typo.caption">
+                                        <span>@context.AssetToken.AssetScriptHash.ToString().ToMask(6)</span>
+                                    </MudText>
+                                }
+                                else
+                                {
+                                     <MudText Color="Color.Primary" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
+                                        <b>
+                                            <span>@context.AssetToken.Name (@context.AssetToken.Symbol)</span>
+                                        </b>
+                                    </MudText>
+                                    <MudText Typo="Typo.caption">
+                                        <span>@context.AssetToken.AssetScriptHash.ToString()</span>
+                                    </MudText>
+                                }
                             </div>
                         </MudTd>
-                        <MudTd>
+                        <MudTd DataLabel="Locked">
                             @context.LockedAmountDisplay
                         </MudTd>
-                        <MudTd>
+                        <MudTd DataLabel="Unlocked">
                             @context.UnlockedAmountDisplay
                         </MudTd>
                     }
