--- a/src/client/Client/Pages/Locks/AssetsLocksPage.razor
+++ b/src/client/Client/Pages/Locks/AssetsLocksPage.razor
@@ -24,7 +24,7 @@
         <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="56px" Width="100%" />
         <MudSkeleton Class="mt-2" SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="280px" Width="100%" />
     }
-    else
+    else if (AssetCounters.Any())
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
             <MudTable Items="@AssetCounters" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.Sm">
@@ -36,48 +36,53 @@
                 <RowTemplate>
                     @if (@context.AssetToken == null)
                     {
-                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
                     }
                     else
                     {
-                        <MudTd DataLabel="Asset">
-                            <div>
-                                @if (AppBreakpointService.CurrentBreakpoint == Breakpoint.Xs || AppBreakpointService.CurrentBreakpoint == Breakpoint.Sm)
-                                {
-                                    <MudText Color="Color.Primary" Align="Align.Right" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
-                                        <b>
-                                            <span>@context.AssetToken.Symbol</span>
-                                        </b>
-                                    </MudText>
-                                    <MudText Typo="Typo.caption">
-                                        <span>@context.AssetToken.AssetScriptHash.ToString().ToMask(6)</span>
-                                    </MudText>
-                                }
-                                else
-                                {
-                                     <MudText Color="Color.Primary" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
-                                        <b>
-                                            <span>@context.AssetToken.Name (@context.AssetToken.Symbol)</span>
-                                        </b>
-                                    </MudText>
-                                    <MudText Typo="Typo.caption">
-                                        <span>@context.AssetToken.AssetScriptHash.ToString()</span>
-                                    </MudText>
-                                }
-                            </div>
-                        </MudTd>
-                        <MudTd DataLabel="Locked">
-                            @context.LockedAmountDisplay
-                        </MudTd>
-                        <MudTd DataLabel="Unlocked">
-                            @context.UnlockedAmountDisplay
-                        </MudTd>
+                    <MudTd DataLabel="Asset">
+                        <div>
+                            <MudHidden Breakpoint="Breakpoint.SmAndDown" Invert="true">
+                                <MudText Color="Color.Primary" Align="Align.Right" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
+                                    <b>
+                                        <span>@context.AssetToken.Symbol</span>
+                                    </b>
+                                </MudText>
+                                <MudText Typo="Typo.caption" Align="Align.Right">
+                                    <span>@context.AssetToken.AssetScriptHash.ToString().ToMask(6)</span>
+                                </MudText>
+                            </MudHidden>
+
+                            <MudHidden Breakpoint="Breakpoint.MdAndUp" Invert="true">
+                                <MudText Color="Color.Primary" Class="cursor-pointer" @onclick="(() => InvokeAssetLockPreviewerModal(context))">
+                                    <b>
+                                        <span>@context.AssetToken.Name (@context.AssetToken.Symbol)</span>
+                                    </b>
+                                </MudText>
+                                <MudText Typo="Typo.caption">
+                                    <span>@context.AssetToken.AssetScriptHash.ToString()</span>
+                                </MudText>
+                            </MudHidden>
+                        </div>
+                    </MudTd>
+                    <MudTd DataLabel="Locked">
+                        @context.LockedAmountDisplay
+                    </MudTd>
+                    <MudTd DataLabel="Unlocked">
+                        @context.UnlockedAmountDisplay
+                    </MudTd>
                     }
             </RowTemplate>
         </MudTable>
     </MudPaper>
+    }
+    else
+    {
+        <MudText Typo="Typo.h6" Class="mt-8" Color="Color.Secondary">
+            There are no NEP-17 token has been locked on the Vault. 
+        </MudText>
     }
 
 </MudContainer>
