--- a/src/client/Client/Pages/Locks/MyTokenRefundsPage.razor
+++ b/src/client/Client/Pages/Locks/MyTokenRefundsPage.razor
@@ -6,24 +6,29 @@
     <div class="d-flex">
         <MudHidden Breakpoint="Breakpoint.SmAndUp">
             <MudText Class="mr-2 align-self-center" Typo="Typo.h5" GutterBottom="false">My Refunds</MudText>
-            <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
         <MudHidden Breakpoint="Breakpoint.Xs">
             <MudText Class="mr-4 align-self-center" Typo="Typo.h4" GutterBottom="false">My Refunds</MudText>
-            <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
+
+        @if (IsCompletelyLoaded)
+        {
+            <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" OnClick="FetchDataAsync" />
+        }
+
     </div>
 </MudContainer>
 
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
     @if (!IsLoaded)
     {
-        //skeleton
+        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="56px" Width="100%" />
+        <MudSkeleton Class="mt-2" SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="280px" Width="100%" />
     }
-    else
+    else if (Refunds.Any())
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
-            <MudTable Items="@Refunds" Class="mx-0 grey darken-4" FixedHeader="true">
+            <MudTable Items="@Refunds" Class="mx-0 grey darken-4" FixedHeader="true" Breakpoint="Breakpoint.Sm">
                 <HeaderContent>
                     <MudTh>Wallet Address</MudTh>
                     <MudTh>Token</MudTh>
@@ -33,33 +38,46 @@
                 <RowTemplate>
                     @if (@context.AssetToken == null)
                     {
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
-                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
                     }
                     else
                     {
-                        <MudTd DataLabel="Wallet Address">@context.WalletAddress.ToMask(6)</MudTd>
-                        <MudTd DataLabel="Token">
-                            <div class="d-flex">
-                                @context.AssetToken.Name (@context.AssetToken.Symbol)
-                            </div>
-                        </MudTd>
-                        <MudTd DataLabel="Total Amount">
-                            <div class="d-flex">
-                                @context.AmountDisplay
-                            </div>
-                        </MudTd>
-                        <MudTd DataLabel="Actions">
-                            <MudMenu Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" DisableElevation="true" Icon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary" Direction="Direction.Left" OffsetX="true">
-                                <MudMenuItem  OnClick="(() => InvokeClaimRefundModalAsync(context))">Claim</MudMenuItem>
-                            </MudMenu>
-                        </MudTd>
-                     }
-                </RowTemplate>
-            </MudTable>
-        </MudPaper>
+                    <MudTd DataLabel="Wallet Address">
+                        <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
+                            @context.WalletAddress.ToMask(6)
+                        </MudHidden>
+                        <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
+                            @context.WalletAddress
+                        </MudHidden>
+                    </MudTd>
+                    <MudTd DataLabel="Token">
+                        <div class="d-flex">
+                            @context.AssetToken.Name (@context.AssetToken.Symbol)
+                        </div>
+                    </MudTd>
+                    <MudTd DataLabel="Total Amount">
+                        <div class="d-flex">
+                            @context.AmountDisplay
+                        </div>
+                    </MudTd>
+                    <MudTd DataLabel="Actions">
+                        <MudMenu Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" DisableElevation="true" Icon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary" Direction="Direction.Left" OffsetX="true">
+                            <MudMenuItem OnClick="(() => InvokeClaimRefundModalAsync(context))">Claim</MudMenuItem>
+                        </MudMenu>
+                    </MudTd>
+                    }
+            </RowTemplate>
+        </MudTable>
+    </MudPaper>
+    }
+    else
+    {
+        <MudText Typo="Typo.h6" Class="mt-8" Color="Color.Secondary">
+            You've no refunds.
+        </MudText>
     }
 
 </MudContainer>
