--- a/src/client/Client/Pages/Modals/AssetLockPreviewerModal.razor
+++ b/src/client/Client/Pages/Modals/AssetLockPreviewerModal.razor
@@ -5,7 +5,7 @@
                 @if (!IsLoaded)
                 {
                     <MudItem xs="12">
-                        <MudSkeleton Height="100px" Width="100%" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" />
+                        <MudSkeleton Height="200px" Width="100%" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" />
                     </MudItem>
                 }
                 else
@@ -20,14 +20,12 @@
                     <MudItem xs="12" md="6">
                         <div>
                             <MudText Typo="Typo.body1"><b>Token ScriptHash</b></MudText>
-                            @if (AppBreakpointService.CurrentBreakpoint == Breakpoint.Xs)
-                            {
+                            <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
                                 <MudText Typo="Typo.body1">@AssetCounterModel.AssetToken.AssetScriptHash.ToString().ToMask(6)</MudText>
-                            }
-                            else
-                            {
+                            </MudHidden>
+                            <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
                                 <MudText Typo="Typo.body1">@AssetCounterModel.AssetToken.AssetScriptHash.ToString()</MudText>
-                            }
+                            </MudHidden>
                         </div>
                     </MudItem>
 
@@ -49,7 +47,7 @@
                         <div>
                             <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Locks</b></MudText>
 
-                            <MudTable Items="@Transactions" Class="mx-0 grey darken-4" Context="transactionContext" Elevation="10">
+                            <MudTable Items="@Transactions" Class="mx-0 grey darken-4" Context="transactionContext" Elevation="10" Breakpoint="Breakpoint.Sm">
                                 <HeaderContent>
                                     <MudTh>Lock Index</MudTh>
                                     <MudTh>Initiator</MudTh>
@@ -63,14 +61,12 @@
                                         </MudText>
                                     </MudTd>
                                     <MudTd DataLabel="Initiator">
-                                        @if (AppBreakpointService.CurrentBreakpoint == Breakpoint.Xs)
-                                        {
-                                        <span>@transactionContext.InitiatorAddressDisplay.ToMask(6)</span>
-                                        }
-                                        else
-                                        {
-                                        <span>@transactionContext.InitiatorAddressDisplay</span>
-                                        }
+                                        <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
+                                            @transactionContext.InitiatorAddressDisplay.ToMask(6)
+                                        </MudHidden>
+                                        <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
+                                            @transactionContext.InitiatorAddressDisplay
+                                        </MudHidden>
                                 </MudTd>
                                 <MudTd DataLabel="Total Amount">@transactionContext.TotalAmountDisplay</MudTd>
                                 <MudTd DataLabel="Status">
