Added My Vestings Initial Page

--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -34,9 +34,9 @@
                 <MudNavLink Href="/locks/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
             </MudNavGroup>
             <MudNavGroup Title="Vesting" Icon="@Icons.Material.Filled.Assessment" Expanded="true">
-                <MudNavLink Href="/vesting" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AccountBalance">My Vault</MudNavLink>
-                <MudNavLink Href="/vesting/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
-                <MudNavLink Href="/vesting/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
+                <MudNavLink Href="/vestings" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AccountBalance">My Vestings</MudNavLink>
+                <MudNavLink Href="/vestings/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
+                <MudNavLink Href="/vestings/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
             </MudNavGroup>
         </MudNavMenu>
     </MudDrawer>
