--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -34,6 +34,7 @@
 @inject IRpcManager RpcManager
 @inject IWalletManager WalletManager
 @inject ILockTokenVaultManager LockTokenVaultManager
+@inject IVestingTokenVaultManager VestingTokenVaultManager
 
 @inject ClientPreferenceManager ClientPreferenceManager
 @inject NavigationManager NavigationManager
